--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==23.1.0
 Django==4.2
 django-cors-headers==4.2.0
 django-environ==0.11.2
+django-rest-passwordreset==1.4.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.4
